syntax = "proto3";

package todolist;

import "google/protobuf/timestamp.proto";
option go_package = "proto/todolistpb";

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  LOW = 1;
  MEDIUM = 2;
  HIGH = 3;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  COMPLETED = 2;
}

message Task {
  int64 id = 1;
  string description = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp due_at = 5;
  Priority priority = 6;
  string namespace = 7;
  Status status = 8;
  repeated string tags = 9;
  google.protobuf.Timestamp remind_at = 10;
}

// 用于存储多个任务
message TaskList {
  repeated Task tasks = 1;
}